grammar.js
    method: $ => [],
  },

  // A binding's left-hand side and an expression share a prefix -- `(a, b)` is
  // both a tuple and a tuple pattern -- and which one it is only becomes clear
  // at the `=`. Tree-sitter explores both, so the ambiguity is declared rather
  // than worked around.
    source_file: $ => $._exprs,

    _var_lit: $ =>
      token(
        choice(
          /__+/,
          /_*\p{Alphabetic}[\p{Alphabetic}0-9_']*/u,
          /[\p{Emoji_Presentation}\p{So}]/u,
        ),
      ),

    var: $ => seq($._var_lit, $._var),

    // A name after a `.` can be a keyword. Reserved words are a property of the
    // token, so these repeat the variable rules around `_var_lit`.
    _method_varlpar: $ => seq(reserved("method", $._var_lit), $._var_lpar),
    _method_varlbra: $ => seq(reserved("method", $._var_lit), $._var_lbra),

    _bin1: $ => token(choice("!=", "==", "<", "<=", ">", ">=", "@")),

    _bin2: $ => token(choice("+", "%", "^", "+.", "-.", "-")),

    // `mod` is its own token so that it can be reserved.
    _bin3: $ =>
      choice(
        alias(token(choice("/", "*.", "/.", "*")), $.op),
        alias("mod", $.op),
      ),

    // `_` gets the same zero-width lookahead as a variable: the scanner only
    // emits `_var` when the next character is not `(` or `[`, which is what
    // keeps `def _(x) = ... end` (a function) apart from `def _ = ... end`.
    _optvar: $ => choice(alias(seq("_", $._var), $.var), $.var),

    integer: $ =>
      token(
        choice(
          /-?[\d][\d_]*/,
          /0[xX][\da-fA-F_]+/,
          /0[oO][0-7_]+/,
          /0[bB][01][01_]*/,
        ),
      ),
    float: $ =>
      choice(
        $._float_no_lbra,
        /-?([\d][\d_]*)?\.[\d][\d_]*([eE][-+]?[\d][\d_]*)?/,
        seq($._float_exp, /[\d][\d_]*/),
      ),

    _exprs: $ =>
      choice(
        seq("open", $._expr, optional($._expr_sep), $._exprs),
        seq($._expr, optional($._expr_sep)),
        seq($._expr, optional($._expr_sep), $._exprs),
        seq($._binding, optional($._expr_sep)),
        seq($._binding, optional($._expr_sep), $._exprs),
      ),

    arglist: $ =>
      choice(
        seq("(", seq(repeat(seq($._arg, ",")), $._arg, optional(",")), ")"),
        seq("(", ")"),
      ),

    _opt: $ => seq("=", $._expr),

    anonymous_argument: $ =>
      choice(
        seq($._pattern, optional($._opt)),
        seq("(", $._pattern, ":", $.type, ")", optional($._opt)),
      ),

    _arg: $ => choice($.labeled_argument, $.anonymous_argument, $.argsof),

    _def: $ => seq("def", optional(alias($._def_decoration, $.let_decoration))),

    def: $ =>
      choice(
        seq(
          $._def,
          "(",
          field("defined", $._optvar),
          ":",
          field("type", $.type),
          ")",
          optional("="),
          alias($._exprs, $.definition),
          alias("end", "def_end"),
        ),
        seq(
          $._def,
          field("defined", $._optvar),
          optional("="),
          alias($._exprs, $.definition),
          alias("end", "def_end"),
        ),
        seq(
          $._def,
          field("defined", $.subfield),
          optional("="),
          alias($._exprs, $.definition),
          alias("end", "def_end"),
        ),
        seq(
          $._def,
          seq(
            field("defined", choice($.subfield_lpar, $.varlpar, $.underscore_lpar)),
            field("arguments", $.arglist),
          ),
          optional("="),
          alias($._exprs, $.definition),
          alias("end", "def_end"),
        ),
      ),

    binding: $ =>
      seq(
        field(
          "defined",
          choice(
            $._pattern,
            $.subfield,
            seq("(", $._pattern, ":", field("type", $.type), ")"),
          ),
        ),
        "=",
        alias($._expr, $.definition),
      ),

    _pattern: $ =>
      choice($._optvar, $.tuple_pattern, $.list_pattern, $.meth_pattern),

    subfield: $ => seq($.var, ".", $._in_subfield),
    _in_subfield: $ =>
      choice(
        alias(alias($._method_var, $.var), $.method),
        seq(alias(alias($._method_var, $.var), $.method), ".", $._in_subfield),
      ),

    _app_list: $ =>
      choice($._app_list_elem, seq($._app_list_elem, ",", $._app_list)),

    method_app: $ =>
      seq(
        field("name", alias($._method_varlpar, $.var)),
        "(",
        optional($._app_list),
        ")",
      ),

    _invoked: $ =>
      choice(alias(alias($._method_var, $.var), $.method), $.method_app),

    invoke: $ =>
      choice(
        seq($._expr, ".", $._invoked),
        prec("question", seq($._expr, "?.", $._invoked)),
      ),

    app: $ => seq(field("name", $.varlpar), "(", optional($._app_list), ")"),

    assoc: $ =>
      choice(
        seq($.varlbra, "[", $._expr, "]"),
        seq($._expr, ".", alias($._method_varlbra, $.var), "[", $._expr, "]"),
      ),
    infix: $ =>
      choice(
        prec.left("bin1", seq($._expr, alias($._bin1, $.op), $._expr)),
        prec.left("bin2", seq($._expr, alias($._bin2, $.op), $._expr)),
        prec.left("bin3", seq($._expr, $._bin3, $._expr)),
      ),

    _expr: $ =>
      choice(
        $.include,
        $.if_def,
        $.if_encoder,
        $.if_version,
        $.coerce,
        $.parens,
        $.integer,
        $.not,
        $.bool,
        $.float,
        $._minus,
        $.string,
        alias($._raw_string, $.string),
        $.var,
        $.list,
        $.get,
        $.set,
        $.encoder,
        $.tuple,
        $.record,
        $.invoke,
        $.app,
        $.append,
        $.assoc,
        $.block,
        $.anonymous_function,
        $.simple_fun,
        $.while,
        $.for,
        $.coalesce,
        $.try,
        $.if,
        $.regexp,
        $.inline_if,
        $.and,
        $.or,
        $.infix,
        $.time_predicate,
        $.time_interval,
      ),
  },
});
